tests/paczka1/small_fuzzy/20815208.err
Error in line 1: z1tr13kZ0c4 S158 61,2
Error in line 12: iqFQ3CBSA88 S158 02,5
